# lame

./: CMakeLists.txt
windows/x86/: config.h
